@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2024 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2026 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -18,7 +18,9 @@ import java.io.IOException;
 import java.io.InputStreamReader;
 import java.io.Reader;
 import java.lang.reflect.Type;
+import java.net.MalformedURLException;
 import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLConnection;
 import java.util.Arrays;
@@ -91,11 +93,23 @@ public class JsonAddonService extends AbstractRemoteAddonService {
     public void modified(@Nullable Map<String, Object> config) {
         if (config != null) {
             String urls = ConfigParser.valueAsOrElse(config.get(CONFIG_URLS), String.class, "");
-            addonServiceUrls = Arrays.asList(urls.split("\\|"));
+            addonServiceUrls = Arrays.asList(urls.split("\\|")).stream().filter(this::isValidUrl).toList();
             showUnstable = ConfigParser.valueAsOrElse(config.get(CONFIG_SHOW_UNSTABLE), Boolean.class, false);
-            cachedRemoteAddons.invalidateValue();
             refreshSource();
         }
+    }
+
+    private boolean isValidUrl(String urlString) {
+        if (urlString.isBlank()) {
+            return false;
+        }
+        try {
+            (new URI(urlString)).toURL();
+        } catch (IllegalArgumentException | URISyntaxException | MalformedURLException e) {
+            logger.warn("JSON Addon Service invalid URL: {}", urlString);
+            return false;
+        }
+        return true;
     }
 
     @Override
@@ -124,7 +138,7 @@ public class JsonAddonService extends AbstractRemoteAddonService {
     protected List<Addon> getRemoteAddons() {
         return addonServiceUrls.stream().map(urlString -> {
             try {
-                URL url = new URL(urlString);
+                URL url = URI.create(urlString).toURL();
                 URLConnection connection = url.openConnection();
                 connection.addRequestProperty("Accept", "application/json");
                 try (Reader reader = new InputStreamReader(connection.getInputStream())) {
@@ -139,7 +153,7 @@ public class JsonAddonService extends AbstractRemoteAddonService {
     }
 
     /**
-     * Check if the addon UID is present and the entry is eitehr stable or unstable add-ons are requested
+     * Check if the addon UID is present and the entry is either stable or unstable add-ons are requested
      *
      * @param addonEntry the add-on entry to check
      * @return {@code true} if the add-on entry should be processed, {@code false otherwise}
@@ -194,7 +208,7 @@ public class JsonAddonService extends AbstractRemoteAddonService {
                 .withDetailedDescription(addonEntry.description).withContentType(addonEntry.contentType)
                 .withAuthor(addonEntry.author).withVersion(addonEntry.version).withLabel(addonEntry.title)
                 .withCompatible(compatible).withMaturity(addonEntry.maturity).withProperties(properties)
-                .withLink(addonEntry.link).withImageLink(addonEntry.imageUrl)
+                .withLink(addonEntry.link).withImageLink(addonEntry.imageUrl).withKeywords(addonEntry.keywords)
                 .withConfigDescriptionURI(addonEntry.configDescriptionURI).withLoggerPackages(addonEntry.loggerPackages)
                 .withConnection(addonEntry.connection).withCountries(addonEntry.countries).build();
     }
