@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2024 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2026 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -13,7 +13,8 @@
 package org.openhab.core.config.core.internal.metadata;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.*;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.when;
 import static org.openhab.core.config.core.internal.metadata.MetadataConfigDescriptionProviderImpl.*;
 
@@ -92,7 +93,7 @@ public class MetadataConfigDescriptionProviderImplTest extends JavaTest {
         assertEquals(URI_LIBERAL, desc.getUID());
         assertEquals(1, desc.getParameters().size());
 
-        ConfigDescriptionParameter param = desc.getParameters().get(0);
+        ConfigDescriptionParameter param = desc.getParameters().getFirst();
         assertEquals("value", param.getName());
         assertEquals("Liberal", param.getDescription());
         assertFalse(param.getLimitToOptions());
@@ -110,11 +111,11 @@ public class MetadataConfigDescriptionProviderImplTest extends JavaTest {
         assertEquals(URI_RESTRICTED, desc.getUID());
         assertEquals(1, desc.getParameters().size());
 
-        ConfigDescriptionParameter param = desc.getParameters().get(0);
+        ConfigDescriptionParameter param = desc.getParameters().getFirst();
         assertEquals("value", param.getName());
         assertEquals("Restricted", param.getDescription());
         assertTrue(param.getLimitToOptions());
-        assertEquals("dimmer", param.getOptions().get(0).getValue());
+        assertEquals("dimmer", param.getOptions().getFirst().getValue());
         assertEquals("switch", param.getOptions().get(1).getValue());
     }
 
@@ -136,7 +137,7 @@ public class MetadataConfigDescriptionProviderImplTest extends JavaTest {
         assertEquals(URI_LIBERAL, desc.getUID());
         assertEquals(1, desc.getParameters().size());
 
-        ConfigDescriptionParameter param = desc.getParameters().get(0);
+        ConfigDescriptionParameter param = desc.getParameters().getFirst();
         assertEquals("value", param.getName());
         assertEquals("Liberal", param.getDescription());
         assertFalse(param.getLimitToOptions());
@@ -161,7 +162,7 @@ public class MetadataConfigDescriptionProviderImplTest extends JavaTest {
         assertEquals(URI_RESTRICTED_DIMMER, desc.getUID());
         assertEquals(2, desc.getParameters().size());
 
-        ConfigDescriptionParameter paramWidth = desc.getParameters().get(0);
+        ConfigDescriptionParameter paramWidth = desc.getParameters().getFirst();
         assertEquals("width", paramWidth.getName());
 
         ConfigDescriptionParameter paramHeight = desc.getParameters().get(1);
