@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2024 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2026 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -12,15 +12,18 @@
  */
 package org.openhab.core.model.core.internal;
 
+import static org.openhab.core.model.core.ModelCoreConstants.*;
+
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.io.OutputStream;
 import java.nio.charset.StandardCharsets;
 import java.text.MessageFormat;
 import java.util.ArrayList;
 import java.util.HashSet;
-import java.util.LinkedList;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.CopyOnWriteArrayList;
@@ -36,6 +39,7 @@ import org.eclipse.jdt.annotation.Nullable;
 import org.eclipse.xtext.resource.SynchronizedXtextResourceSet;
 import org.eclipse.xtext.resource.XtextResource;
 import org.eclipse.xtext.resource.XtextResourceSet;
+import org.eclipse.xtext.validation.AbstractValidationDiagnostic;
 import org.openhab.core.model.core.EventType;
 import org.openhab.core.model.core.ModelRepository;
 import org.openhab.core.model.core.ModelRepositoryChangeListener;
@@ -50,6 +54,8 @@ import org.slf4j.LoggerFactory;
  * @author Kai Kreuzer - Initial contribution
  * @author Oliver Libutzki - Added reloadAllModelsOfType method
  * @author Simon Kaufmann - added validation of models before loading them
+ * @author Laurent Garnier - Added methods generateFileFormat and createIsolatedModel
+ *         + return errors and warnings when loading a model
  */
 @Component(immediate = true)
 @NonNullByDefault
@@ -63,6 +69,8 @@ public class ModelRepositoryImpl implements ModelRepository {
     private final List<ModelRepositoryChangeListener> listeners = new CopyOnWriteArrayList<>();
 
     private final SafeEMF safeEmf;
+
+    private int counter;
 
     @Activate
     public ModelRepositoryImpl(final @Reference SafeEMF safeEmf) {
@@ -81,14 +89,14 @@ public class ModelRepositoryImpl implements ModelRepository {
             Resource resource = getResource(name);
             if (resource != null) {
                 if (!resource.getContents().isEmpty()) {
-                    return resource.getContents().get(0);
+                    return resource.getContents().getFirst();
                 } else {
-                    logger.warn("Configuration model '{}' is either empty or cannot be parsed correctly!", name);
+                    logger.warn("DSL model '{}' is either empty or cannot be parsed correctly!", name);
                     resourceSet.getResources().remove(resource);
                     return null;
                 }
             } else {
-                logger.trace("Configuration model '{}' can not be found", name);
+                logger.trace("DSL model '{}' can not be found", name);
                 return null;
             }
         }
@@ -96,19 +104,47 @@ public class ModelRepositoryImpl implements ModelRepository {
 
     @Override
     public boolean addOrRefreshModel(String name, final InputStream originalInputStream) {
-        logger.info("Loading model '{}'", name);
+        if (isIsolatedModel(name)) {
+            logger.info("Ignoring DSL model '{}'", name);
+            return false;
+        }
+        return addOrRefreshModel(name, originalInputStream, null, null);
+    }
+
+    public boolean addOrRefreshModel(String name, final InputStream originalInputStream, @Nullable List<String> errors,
+            @Nullable List<String> warnings) {
+        if (isIsolatedModel(name)) {
+            logger.debug("Loading DSL model '{}'", name);
+        } else {
+            logger.info("Loading DSL model '{}'", name);
+        }
         Resource resource = null;
         byte[] bytes;
         try (InputStream inputStream = originalInputStream) {
             bytes = inputStream.readAllBytes();
-            String validationResult = validateModel(name, new ByteArrayInputStream(bytes));
-            if (validationResult != null) {
-                logger.warn("Configuration model '{}' has errors, therefore ignoring it: {}", name, validationResult);
-                removeModel(name);
+            List<String> newErrors = new ArrayList<>();
+            List<String> newWarnings = new ArrayList<>();
+            boolean valid = validateModel(name, new ByteArrayInputStream(bytes), newErrors, newWarnings);
+            if (errors != null) {
+                errors.addAll(newErrors);
+            }
+            if (warnings != null) {
+                warnings.addAll(newWarnings);
+            }
+            if (!valid) {
+                logger.warn("DSL model '{}' has errors, therefore ignoring it: {}", name, String.join("\n", newErrors));
+                removeResource(name);
                 return false;
             }
+            if (!newWarnings.isEmpty()) {
+                logger.info("Validation issues found in DSL model '{}', using it anyway:\n{}", name,
+                        String.join("\n", newWarnings));
+            }
         } catch (IOException e) {
-            logger.warn("Configuration model '{}' cannot be parsed correctly!", name, e);
+            if (errors != null) {
+                errors.add("Model cannot be parsed correctly: %s".formatted(e.getMessage()));
+            }
+            logger.warn("DSL model '{}' cannot be parsed correctly!", name, e);
             return false;
         }
         try (InputStream inputStream = new ByteArrayInputStream(bytes)) {
@@ -140,7 +176,10 @@ public class ModelRepositoryImpl implements ModelRepository {
                 }
             }
         } catch (IOException e) {
-            logger.warn("Configuration model '{}' cannot be parsed correctly!", name, e);
+            if (errors != null) {
+                errors.add("Model cannot be parsed correctly: %s".formatted(e.getMessage()));
+            }
+            logger.warn("DSL model '{}' cannot be parsed correctly!", name, e);
             if (resource != null) {
                 resourceSet.getResources().remove(resource);
             }
@@ -150,6 +189,15 @@ public class ModelRepositoryImpl implements ModelRepository {
 
     @Override
     public boolean removeModel(String name) {
+        if (isIsolatedModel(name)) {
+            logger.debug("Unloading DSL model '{}'", name);
+        } else {
+            logger.info("Unloading DSL model '{}'", name);
+        }
+        return removeResource(name);
+    }
+
+    private boolean removeResource(String name) {
         Resource resource = getResource(name);
         if (resource != null) {
             synchronized (resourceSet) {
@@ -171,20 +219,22 @@ public class ModelRepositoryImpl implements ModelRepository {
 
             return resourceListCopy.stream()
                     .filter(input -> input.getURI().lastSegment().contains(".") && input.isLoaded()
-                            && modelType.equalsIgnoreCase(input.getURI().fileExtension()))
+                            && modelType.equalsIgnoreCase(input.getURI().fileExtension())
+                            && !isIsolatedModel(input.getURI().lastSegment()))
                     .map(from -> from.getURI().path()).toList();
         }
     }
 
     @Override
     public void reloadAllModelsOfType(final String modelType) {
+        logger.debug("reloadAllModelsOfType {}", modelType);
         synchronized (resourceSet) {
             // Make a copy to avoid ConcurrentModificationException
             List<Resource> resourceListCopy = new ArrayList<>(resourceSet.getResources());
             for (Resource resource : resourceListCopy) {
                 if (resource.getURI().lastSegment().contains(".") && resource.isLoaded()
                         && modelType.equalsIgnoreCase(resource.getURI().fileExtension())
-                        && !resource.getURI().lastSegment().startsWith("tmp_")) {
+                        && !isIsolatedModel(resource.getURI().lastSegment())) {
                     XtextResource xtextResource = (XtextResource) resource;
                     // It's not sufficient to discard the derived state.
                     // The quick & dirts solution is to reparse the whole resource.
@@ -206,7 +256,7 @@ public class ModelRepositoryImpl implements ModelRepository {
             for (Resource resource : resourceListCopy) {
                 if (resource.getURI().lastSegment().contains(".") && resource.isLoaded()
                         && modelType.equalsIgnoreCase(resource.getURI().fileExtension())
-                        && !resource.getURI().lastSegment().startsWith("tmp_")) {
+                        && !isIsolatedModel(resource.getURI().lastSegment())) {
                     logger.debug("Removing resource '{}'", resource.getURI().lastSegment());
                     ret.add(resource.getURI().lastSegment());
                     resourceSet.getResources().remove(resource);
@@ -225,6 +275,29 @@ public class ModelRepositoryImpl implements ModelRepository {
     @Override
     public void removeModelRepositoryChangeListener(ModelRepositoryChangeListener listener) {
         listeners.remove(listener);
+    }
+
+    @Override
+    public @Nullable String createIsolatedModel(String modelType, InputStream inputStream, List<String> errors,
+            List<String> warnings) {
+        String name = "%smodel_%d.%s".formatted(PREFIX_TMP_MODEL, ++counter, modelType);
+        return addOrRefreshModel(name, inputStream, errors, warnings) ? name : null;
+    }
+
+    @Override
+    public void generateFileFormat(OutputStream out, String modelType, EObject modelContent) {
+        synchronized (resourceSet) {
+            String name = "%sgenerated_%d.%s".formatted(PREFIX_TMP_MODEL, ++counter, modelType);
+            Resource resource = resourceSet.createResource(URI.createURI(name));
+            try {
+                resource.getContents().add(modelContent);
+                resource.save(out, Map.of(XtextResource.OPTION_ENCODING, StandardCharsets.UTF_8.name()));
+            } catch (IOException e) {
+                logger.warn("Exception when saving DSL model {}", resource.getURI().lastSegment());
+            } finally {
+                resourceSet.getResources().remove(resource);
+            }
+        }
     }
 
     private @Nullable Resource getResource(String name) {
@@ -247,40 +320,60 @@ public class ModelRepositoryImpl implements ModelRepository {
      * Validation will be done on a separate resource, in order to keep the original one intact in case its content
      * needs to be removed because of syntactical errors.
      *
-     * @param name
-     * @param inputStream
-     * @return error messages as a String if any syntactical error were found, <code>null</code> otherwise
+     * @param name the model name
+     * @param inputStream an input stream with the model's content
+     * @param errors the list to be used to fill the errors
+     * @param warnings the list to be used to fill the warnings
+     * @return false if any syntactical error were found, false otherwise
      * @throws IOException if there was an error with the given {@link InputStream}, loading the resource from there
      */
-    private @Nullable String validateModel(String name, InputStream inputStream) throws IOException {
+    private boolean validateModel(String name, InputStream inputStream, List<String> errors, List<String> warnings)
+            throws IOException {
         // use another resource for validation in order to keep the original one for emergency-removal in case of errors
-        Resource resource = resourceSet.createResource(URI.createURI("tmp_" + name));
+        Resource resource = resourceSet.createResource(URI.createURI(PREFIX_TMP_MODEL + name));
         try {
             resource.load(inputStream, resourceOptions);
-            StringBuilder criticalErrors = new StringBuilder();
-            List<String> warnings = new LinkedList<>();
 
             if (!resource.getContents().isEmpty()) {
                 // Check for syntactical errors
                 for (Diagnostic diagnostic : resource.getErrors()) {
-                    criticalErrors
-                            .append(MessageFormat.format("[{0},{1}]: {2}\n", Integer.toString(diagnostic.getLine()),
-                                    Integer.toString(diagnostic.getColumn()), diagnostic.getMessage()));
+                    errors.add(MessageFormat.format("[{0},{1}]: {2}", Integer.toString(diagnostic.getLine()),
+                            Integer.toString(diagnostic.getColumn()), diagnostic.getMessage()));
                 }
-                if (!criticalErrors.isEmpty()) {
-                    return criticalErrors.toString();
+                if (!resource.getErrors().isEmpty()) {
+                    return false;
                 }
 
                 // Check for validation errors, but log them only
                 try {
+                    String modelType = resource.getURI().fileExtension().toLowerCase(Locale.ROOT);
                     final org.eclipse.emf.common.util.Diagnostic diagnostic = safeEmf
-                            .call(() -> Diagnostician.INSTANCE.validate(resource.getContents().get(0)));
+                            .call(() -> Diagnostician.INSTANCE.validate(resource.getContents().getFirst()));
                     for (org.eclipse.emf.common.util.Diagnostic d : diagnostic.getChildren()) {
-                        warnings.add(d.getMessage());
+                        switch (modelType) {
+                            case "rules":
+                                if (d instanceof AbstractValidationDiagnostic vd
+                                        && d.getSeverity() == org.eclipse.emf.common.util.Diagnostic.ERROR
+                                        && ("uid".equals(vd.getIssueCode()) || "time".equals(vd.getIssueCode()))) {
+                                    errors.add(d.getMessage());
+                                } else {
+                                    warnings.add(d.getMessage());
+                                }
+                                break;
+                            case "script":
+                                warnings.add(d.getMessage());
+                                break;
+                            default:
+                                if (d.getSeverity() == org.eclipse.emf.common.util.Diagnostic.ERROR) {
+                                    errors.add(d.getMessage());
+                                } else {
+                                    warnings.add(d.getMessage());
+                                }
+                                break;
+                        }
                     }
-                    if (!warnings.isEmpty()) {
-                        logger.info("Validation issues found in configuration model '{}', using it anyway:\n{}", name,
-                                String.join("\n", warnings));
+                    if (!errors.isEmpty()) {
+                        return false;
                     }
                 } catch (NullPointerException e) {
                     // see https://github.com/eclipse/smarthome/issues/3335
@@ -290,7 +383,7 @@ public class ModelRepositoryImpl implements ModelRepository {
         } finally {
             resourceSet.getResources().remove(resource);
         }
-        return null;
+        return true;
     }
 
     private void notifyListeners(String name, EventType type) {
