@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2024 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2026 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -14,6 +14,7 @@ package org.openhab.core.persistence.internal;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.is;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 
@@ -27,7 +28,6 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
-import java.util.Set;
 
 import org.eclipse.jdt.annotation.NonNull;
 import org.eclipse.jdt.annotation.NonNullByDefault;
@@ -43,6 +43,7 @@ import org.mockito.junit.jupiter.MockitoSettings;
 import org.mockito.quality.Strictness;
 import org.openhab.core.common.SafeCaller;
 import org.openhab.core.common.SafeCallerBuilder;
+import org.openhab.core.items.GroupFunction;
 import org.openhab.core.items.GroupItem;
 import org.openhab.core.items.Item;
 import org.openhab.core.items.ItemNotFoundException;
@@ -54,14 +55,16 @@ import org.openhab.core.library.types.StringType;
 import org.openhab.core.persistence.FilterCriteria;
 import org.openhab.core.persistence.HistoricItem;
 import org.openhab.core.persistence.ModifiablePersistenceService;
+import org.openhab.core.persistence.PersistedItem;
 import org.openhab.core.persistence.PersistenceItemConfiguration;
-import org.openhab.core.persistence.PersistenceItemInfo;
 import org.openhab.core.persistence.PersistenceService;
 import org.openhab.core.persistence.QueryablePersistenceService;
 import org.openhab.core.persistence.config.PersistenceAllConfig;
 import org.openhab.core.persistence.config.PersistenceConfig;
 import org.openhab.core.persistence.config.PersistenceGroupConfig;
+import org.openhab.core.persistence.config.PersistenceGroupExcludeConfig;
 import org.openhab.core.persistence.config.PersistenceItemConfig;
+import org.openhab.core.persistence.config.PersistenceItemExcludeConfig;
 import org.openhab.core.persistence.filter.PersistenceFilter;
 import org.openhab.core.persistence.filter.PersistenceThresholdFilter;
 import org.openhab.core.persistence.registry.PersistenceServiceConfiguration;
@@ -76,12 +79,14 @@ import org.openhab.core.service.ReadyMarker;
 import org.openhab.core.service.ReadyService;
 import org.openhab.core.types.State;
 import org.openhab.core.types.TimeSeries;
+import org.openhab.core.types.TimeSeries.Entry;
 import org.openhab.core.types.UnDefType;
 
 /**
  * The {@link PersistenceManagerTest} contains tests for the {@link PersistenceManagerImpl}
  *
  * @author Jan N. Klug - Initial contribution
+ * @author Mark Herwege - Implement aliases
  */
 @NonNullByDefault
 @ExtendWith(MockitoExtension.class)
@@ -91,11 +96,16 @@ public class PersistenceManagerTest {
     private static final String TEST_ITEM2_NAME = "testItem2";
     private static final String TEST_ITEM3_NAME = "testItem3";
     private static final String TEST_GROUP_ITEM_NAME = "groupItem";
+    private static final String TEST_GROUP_ITEM2_BASE_NAME = "groupItem2Base";
+    private static final String TEST_GROUP_ITEM2_NAME = "groupItem2";
 
     private static final StringItem TEST_ITEM = new StringItem(TEST_ITEM_NAME);
     private static final StringItem TEST_ITEM2 = new StringItem(TEST_ITEM2_NAME);
     private static final NumberItem TEST_ITEM3 = new NumberItem(TEST_ITEM3_NAME);
     private static final GroupItem TEST_GROUP_ITEM = new GroupItem(TEST_GROUP_ITEM_NAME);
+    private static final NumberItem TEST_GROUP_ITEM2_BASE = new NumberItem(TEST_GROUP_ITEM2_BASE_NAME);
+    private static final GroupItem TEST_GROUP_ITEM2 = new GroupItem(TEST_GROUP_ITEM2_NAME, TEST_GROUP_ITEM2_BASE,
+            new GroupFunction.Equality());
 
     private static final State TEST_STATE = new StringType("testState1");
 
@@ -116,44 +126,76 @@ public class PersistenceManagerTest {
         }
     };
 
+    private static final PersistedItem TEST_PERSISTED_ITEM = new PersistedItem() {
+        @Override
+        public ZonedDateTime getTimestamp() {
+            return ZonedDateTime.now().minusDays(1);
+        }
+
+        @Override
+        public State getState() {
+            return TEST_STATE;
+        }
+
+        @Override
+        public String getName() {
+            return TEST_ITEM_NAME;
+        }
+
+        @Override
+        public @Nullable ZonedDateTime getLastStateChange() {
+            return null;
+        }
+
+        @Override
+        public @Nullable State getLastState() {
+            return null;
+        }
+    };
+
     private static final String TEST_PERSISTENCE_SERVICE_ID = "testPersistenceService";
     private static final String TEST_QUERYABLE_PERSISTENCE_SERVICE_ID = "testQueryablePersistenceService";
 
     private static final String TEST_MODIFIABLE_PERSISTENCE_SERVICE_ID = "testModifiablePersistenceService";
 
-    private @NonNullByDefault({}) @Mock CronScheduler cronSchedulerMock;
-    private @NonNullByDefault({}) @Mock Scheduler schedulerMock;
-    private @NonNullByDefault({}) @Mock ScheduledCompletableFuture<Void> scheduledFutureMock;
-    private @NonNullByDefault({}) @Mock ItemRegistry itemRegistryMock;
-    private @NonNullByDefault({}) @Mock SafeCaller safeCallerMock;
-    private @NonNullByDefault({}) @Mock SafeCallerBuilder<@NonNull QueryablePersistenceService> safeCallerBuilderMock;
-    private @NonNullByDefault({}) @Mock ReadyService readyServiceMock;
-    private @NonNullByDefault({}) @Mock PersistenceServiceConfigurationRegistry persistenceServiceConfigurationRegistryMock;
+    private @Mock @NonNullByDefault({}) CronScheduler cronSchedulerMock;
+    private @Mock @NonNullByDefault({}) Scheduler schedulerMock;
+    private @Mock @NonNullByDefault({}) ScheduledCompletableFuture<Void> scheduledFutureMock;
+    private @Mock @NonNullByDefault({}) ItemRegistry itemRegistryMock;
+    private @Mock @NonNullByDefault({}) SafeCaller safeCallerMock;
+    private @Mock @NonNullByDefault({}) SafeCallerBuilder<@NonNull QueryablePersistenceService> safeCallerBuilderMock;
+    private @Mock @NonNullByDefault({}) ReadyService readyServiceMock;
+    private @Mock @NonNullByDefault({}) PersistenceServiceConfigurationRegistry persistenceServiceConfigurationRegistryMock;
 
-    private @NonNullByDefault({}) @Mock PersistenceService persistenceServiceMock;
-    private @NonNullByDefault({}) @Mock QueryablePersistenceService queryablePersistenceServiceMock;
-    private @NonNullByDefault({}) @Mock ModifiablePersistenceService modifiablePersistenceServiceMock;
+    private @Mock @NonNullByDefault({}) PersistenceService persistenceServiceMock;
+    private @Mock @NonNullByDefault({}) QueryablePersistenceService queryablePersistenceServiceMock;
+    private @Mock @NonNullByDefault({}) ModifiablePersistenceService modifiablePersistenceServiceMock;
 
     private @NonNullByDefault({}) PersistenceManagerImpl manager;
 
     @BeforeEach
     public void setUp() throws ItemNotFoundException {
         TEST_GROUP_ITEM.addMember(TEST_ITEM);
+        TEST_GROUP_ITEM.addMember(TEST_GROUP_ITEM2);
+        TEST_GROUP_ITEM2.addMember(TEST_ITEM3);
 
         // set initial states
         TEST_ITEM.setState(UnDefType.NULL);
         TEST_ITEM2.setState(UnDefType.NULL);
         TEST_ITEM3.setState(DecimalType.ZERO);
         TEST_GROUP_ITEM.setState(UnDefType.NULL);
+        TEST_GROUP_ITEM2.setState(DecimalType.ZERO);
 
         when(itemRegistryMock.getItem(TEST_GROUP_ITEM_NAME)).thenReturn(TEST_GROUP_ITEM);
+        when(itemRegistryMock.getItem(TEST_GROUP_ITEM2_NAME)).thenReturn(TEST_GROUP_ITEM2);
         when(itemRegistryMock.getItem(TEST_ITEM_NAME)).thenReturn(TEST_ITEM);
         when(itemRegistryMock.getItem(TEST_ITEM2_NAME)).thenReturn(TEST_ITEM2);
         when(itemRegistryMock.getItem(TEST_ITEM3_NAME)).thenReturn(TEST_ITEM3);
         when(itemRegistryMock.getItems()).thenReturn(List.of(TEST_ITEM, TEST_ITEM2, TEST_ITEM3, TEST_GROUP_ITEM));
         when(persistenceServiceMock.getId()).thenReturn(TEST_PERSISTENCE_SERVICE_ID);
         when(queryablePersistenceServiceMock.getId()).thenReturn(TEST_QUERYABLE_PERSISTENCE_SERVICE_ID);
-        when(queryablePersistenceServiceMock.query(any())).thenReturn(List.of(TEST_HISTORIC_ITEM));
+        when(queryablePersistenceServiceMock.query(any(), any())).thenReturn(List.of(TEST_HISTORIC_ITEM));
+        when(queryablePersistenceServiceMock.persistedItem(any(), any())).thenReturn(TEST_PERSISTED_ITEM);
         when(modifiablePersistenceServiceMock.getId()).thenReturn(TEST_MODIFIABLE_PERSISTENCE_SERVICE_ID);
 
         manager = new PersistenceManagerImpl(cronSchedulerMock, schedulerMock, itemRegistryMock, safeCallerMock,
@@ -167,7 +209,7 @@ public class PersistenceManagerTest {
 
     @Test
     public void appliesToItemWithItemConfig() {
-        addConfiguration(TEST_PERSISTENCE_SERVICE_ID, new PersistenceItemConfig(TEST_ITEM_NAME),
+        addConfiguration(TEST_PERSISTENCE_SERVICE_ID, List.of(new PersistenceItemConfig(TEST_ITEM_NAME)),
                 PersistenceStrategy.Globals.UPDATE, null);
 
         manager.stateUpdated(TEST_ITEM, TEST_STATE);
@@ -178,7 +220,7 @@ public class PersistenceManagerTest {
 
     @Test
     public void doesNotApplyToItemWithItemConfig() {
-        addConfiguration(TEST_PERSISTENCE_SERVICE_ID, new PersistenceItemConfig(TEST_ITEM_NAME),
+        addConfiguration(TEST_PERSISTENCE_SERVICE_ID, List.of(new PersistenceItemConfig(TEST_ITEM_NAME)),
                 PersistenceStrategy.Globals.UPDATE, null);
 
         manager.stateUpdated(TEST_ITEM2, TEST_STATE);
@@ -188,7 +230,7 @@ public class PersistenceManagerTest {
 
     @Test
     public void appliesToGroupItemWithItemConfig() {
-        addConfiguration(TEST_PERSISTENCE_SERVICE_ID, new PersistenceItemConfig(TEST_GROUP_ITEM_NAME),
+        addConfiguration(TEST_PERSISTENCE_SERVICE_ID, List.of(new PersistenceItemConfig(TEST_GROUP_ITEM_NAME)),
                 PersistenceStrategy.Globals.UPDATE, null);
 
         manager.stateUpdated(TEST_GROUP_ITEM, TEST_STATE);
@@ -199,7 +241,7 @@ public class PersistenceManagerTest {
 
     @Test
     public void appliesToItemWithGroupConfig() {
-        addConfiguration(TEST_PERSISTENCE_SERVICE_ID, new PersistenceGroupConfig(TEST_GROUP_ITEM_NAME),
+        addConfiguration(TEST_PERSISTENCE_SERVICE_ID, List.of(new PersistenceGroupConfig(TEST_GROUP_ITEM_NAME)),
                 PersistenceStrategy.Globals.UPDATE, null);
 
         manager.stateUpdated(TEST_ITEM, TEST_STATE);
@@ -210,7 +252,7 @@ public class PersistenceManagerTest {
 
     @Test
     public void doesNotApplyToItemWithGroupConfig() {
-        addConfiguration(TEST_PERSISTENCE_SERVICE_ID, new PersistenceGroupConfig(TEST_GROUP_ITEM_NAME),
+        addConfiguration(TEST_PERSISTENCE_SERVICE_ID, List.of(new PersistenceGroupConfig(TEST_GROUP_ITEM_NAME)),
                 PersistenceStrategy.Globals.UPDATE, null);
 
         manager.stateUpdated(TEST_ITEM2, TEST_STATE);
@@ -221,8 +263,8 @@ public class PersistenceManagerTest {
 
     @Test
     public void appliesToItemWithAllConfig() {
-        addConfiguration(TEST_PERSISTENCE_SERVICE_ID, new PersistenceAllConfig(), PersistenceStrategy.Globals.UPDATE,
-                null);
+        addConfiguration(TEST_PERSISTENCE_SERVICE_ID, List.of(new PersistenceAllConfig()),
+                PersistenceStrategy.Globals.UPDATE, null);
 
         manager.stateUpdated(TEST_ITEM, TEST_STATE);
         manager.stateUpdated(TEST_ITEM2, TEST_STATE);
@@ -236,9 +278,69 @@ public class PersistenceManagerTest {
     }
 
     @Test
+    public void doesNotApplyToItemWithGroupConfigAndItemExclusion() {
+        addConfiguration(TEST_PERSISTENCE_SERVICE_ID, List.of(new PersistenceGroupConfig(TEST_GROUP_ITEM_NAME),
+                new PersistenceItemExcludeConfig(TEST_ITEM_NAME)), PersistenceStrategy.Globals.UPDATE, null);
+
+        manager.stateUpdated(TEST_ITEM, TEST_STATE);
+
+        verifyNoMoreInteractions(persistenceServiceMock);
+    }
+
+    @Test
+    public void doesNotApplyToItemWithAllConfigAndItemExclusion() {
+        addConfiguration(TEST_PERSISTENCE_SERVICE_ID,
+                List.of(new PersistenceAllConfig(), new PersistenceItemExcludeConfig(TEST_ITEM_NAME)),
+                PersistenceStrategy.Globals.UPDATE, null);
+
+        manager.stateUpdated(TEST_ITEM, TEST_STATE);
+        manager.stateUpdated(TEST_ITEM2, TEST_STATE);
+        manager.stateUpdated(TEST_GROUP_ITEM, TEST_STATE);
+
+        verify(persistenceServiceMock).store(TEST_ITEM2, null);
+        verify(persistenceServiceMock).store(TEST_GROUP_ITEM, null);
+
+        verifyNoMoreInteractions(persistenceServiceMock);
+    }
+
+    @Test
+    public void doesNotApplyToItemWithAllConfigAndGroupExclusion() {
+        addConfiguration(TEST_PERSISTENCE_SERVICE_ID,
+                List.of(new PersistenceAllConfig(), new PersistenceGroupExcludeConfig(TEST_GROUP_ITEM_NAME)),
+                PersistenceStrategy.Globals.UPDATE, null);
+
+        manager.stateUpdated(TEST_ITEM, TEST_STATE);
+        manager.stateUpdated(TEST_ITEM2, TEST_STATE);
+        manager.stateUpdated(TEST_GROUP_ITEM, TEST_STATE);
+
+        verify(persistenceServiceMock).store(TEST_ITEM2, null);
+        verify(persistenceServiceMock).store(TEST_GROUP_ITEM, null);
+
+        verifyNoMoreInteractions(persistenceServiceMock);
+    }
+
+    @Test
+    public void doesNotApplyToNestedGroupItemWithAllConfigAndGroupExclusion() {
+        addConfiguration(TEST_PERSISTENCE_SERVICE_ID,
+                List.of(new PersistenceAllConfig(), new PersistenceGroupExcludeConfig(TEST_GROUP_ITEM_NAME)),
+                PersistenceStrategy.Globals.UPDATE, null);
+
+        manager.stateUpdated(TEST_ITEM, TEST_STATE);
+        manager.stateUpdated(TEST_ITEM2, TEST_STATE);
+        manager.stateUpdated(TEST_GROUP_ITEM, TEST_STATE);
+        manager.stateUpdated(TEST_ITEM3, DecimalType.ZERO);
+        manager.stateUpdated(TEST_GROUP_ITEM2, DecimalType.ZERO);
+
+        verify(persistenceServiceMock).store(TEST_ITEM2, null);
+        verify(persistenceServiceMock).store(TEST_GROUP_ITEM, null);
+
+        verifyNoMoreInteractions(persistenceServiceMock);
+    }
+
+    @Test
     public void updatedStatePersistsEveryUpdate() {
-        addConfiguration(TEST_PERSISTENCE_SERVICE_ID, new PersistenceAllConfig(), PersistenceStrategy.Globals.UPDATE,
-                null);
+        addConfiguration(TEST_PERSISTENCE_SERVICE_ID, List.of(new PersistenceAllConfig()),
+                PersistenceStrategy.Globals.UPDATE, null);
 
         manager.stateUpdated(TEST_ITEM, TEST_STATE);
         manager.stateUpdated(TEST_ITEM, TEST_STATE);
@@ -250,8 +352,8 @@ public class PersistenceManagerTest {
 
     @Test
     public void updatedStateDoesNotPersistWithChangeStrategy() {
-        addConfiguration(TEST_PERSISTENCE_SERVICE_ID, new PersistenceAllConfig(), PersistenceStrategy.Globals.CHANGE,
-                null);
+        addConfiguration(TEST_PERSISTENCE_SERVICE_ID, List.of(new PersistenceAllConfig()),
+                PersistenceStrategy.Globals.CHANGE, null);
 
         manager.stateUpdated(TEST_ITEM, TEST_STATE);
         verifyNoMoreInteractions(persistenceServiceMock);
@@ -259,8 +361,8 @@ public class PersistenceManagerTest {
 
     @Test
     public void changedStatePersistsWithChangeStrategy() {
-        addConfiguration(TEST_PERSISTENCE_SERVICE_ID, new PersistenceAllConfig(), PersistenceStrategy.Globals.CHANGE,
-                null);
+        addConfiguration(TEST_PERSISTENCE_SERVICE_ID, List.of(new PersistenceAllConfig()),
+                PersistenceStrategy.Globals.CHANGE, null);
 
         manager.stateChanged(TEST_ITEM, UnDefType.UNDEF, TEST_STATE);
 
@@ -270,8 +372,8 @@ public class PersistenceManagerTest {
 
     @Test
     public void changedStateDoesNotPersistWithUpdateStrategy() {
-        addConfiguration(TEST_PERSISTENCE_SERVICE_ID, new PersistenceAllConfig(), PersistenceStrategy.Globals.UPDATE,
-                null);
+        addConfiguration(TEST_PERSISTENCE_SERVICE_ID, List.of(new PersistenceAllConfig()),
+                PersistenceStrategy.Globals.UPDATE, null);
 
         manager.stateChanged(TEST_ITEM, UnDefType.UNDEF, TEST_STATE);
 
@@ -285,11 +387,16 @@ public class PersistenceManagerTest {
         manager.onReadyMarkerAdded(new ReadyMarker("", ""));
         verify(readyServiceMock, timeout(1000)).markReady(any());
 
-        assertThat(TEST_ITEM2.getState(), is(TEST_STATE));
         assertThat(TEST_ITEM.getState(), is(TEST_STATE));
+        assertThat(TEST_ITEM2.getState(), is(TEST_STATE));
         assertThat(TEST_GROUP_ITEM.getState(), is(TEST_STATE));
 
-        verify(queryablePersistenceServiceMock, times(3)).query(any());
+        verify(queryablePersistenceServiceMock, times(3)).persistedItem(any(), any());
+
+        ZonedDateTime lastStateUpdate = TEST_ITEM.getLastStateUpdate();
+        assertNotNull(lastStateUpdate);
+        assertTrue(lastStateUpdate.isAfter(ZonedDateTime.now().minusDays(2)));
+        assertTrue(lastStateUpdate.isBefore(ZonedDateTime.now().minusDays(1)));
 
         verifyNoMoreInteractions(queryablePersistenceServiceMock);
         verifyNoMoreInteractions(persistenceServiceMock);
@@ -310,7 +417,11 @@ public class PersistenceManagerTest {
         assertThat(TEST_ITEM2.getState(), is(TEST_STATE));
         assertThat(TEST_GROUP_ITEM.getState(), is(TEST_STATE));
 
-        verify(queryablePersistenceServiceMock, times(2)).query(any());
+        verify(queryablePersistenceServiceMock, times(2)).persistedItem(any(), any());
+
+        ZonedDateTime lastStateUpdate = TEST_ITEM.getLastStateUpdate();
+        assertNotNull(lastStateUpdate);
+        assertTrue(lastStateUpdate.isAfter(ZonedDateTime.now().minusHours(1)));
 
         verifyNoMoreInteractions(queryablePersistenceServiceMock);
         verifyNoMoreInteractions(persistenceServiceMock);
@@ -329,13 +440,17 @@ public class PersistenceManagerTest {
             return future;
         });
 
-        addConfiguration(TestModifiablePersistenceService.ID, new PersistenceAllConfig(),
+        addConfiguration(TestModifiablePersistenceService.ID, List.of(new PersistenceAllConfig()),
                 PersistenceStrategy.Globals.FORECAST, null);
+        addConfiguration(TEST_PERSISTENCE_SERVICE_ID, List.of(new PersistenceAllConfig()),
+                PersistenceStrategy.Globals.UPDATE, null);
 
-        Instant time1 = Instant.now().minusSeconds(1000);
-        Instant time2 = Instant.now().plusSeconds(1000);
-        Instant time3 = Instant.now().plusSeconds(2000);
-        Instant time4 = Instant.now().plusSeconds(3000);
+        Instant now = Instant.now();
+        ZonedDateTime time0 = now.atZone(ZoneId.systemDefault()).minusSeconds(5000);
+        Instant time1 = now.minusSeconds(1000);
+        Instant time2 = now.plusSeconds(1000);
+        Instant time3 = now.plusSeconds(2000);
+        Instant time4 = now.plusSeconds(3000);
 
         // add elements
         TimeSeries timeSeries = new TimeSeries(TimeSeries.Policy.ADD);
@@ -343,6 +458,7 @@ public class PersistenceManagerTest {
         timeSeries.add(time2, new StringType("two"));
         timeSeries.add(time3, new StringType("three"));
         timeSeries.add(time4, new StringType("four"));
+        TEST_ITEM.setState(new StringType("zero"), null, time0, null, null);
 
         manager.timeSeriesUpdated(TEST_ITEM, timeSeries);
         InOrder inOrder = inOrder(service, schedulerMock);
@@ -353,7 +469,25 @@ public class PersistenceManagerTest {
 
         // first element not scheduled, because it is in the past, check if second is scheduled
         inOrder.verify(schedulerMock).at(any(SchedulerRunnable.class), eq(time2));
+        // allow any number of getId() calls
+        inOrder.verify(service, atLeast(0)).getId();
         inOrder.verifyNoMoreInteractions();
+
+        // check if timeseries element in the past updated item state
+        Entry firstEntry = timeSeries.getStates().findFirst().get();
+        assertThat(TEST_ITEM.getState(), is(firstEntry.state()));
+        assertThat(TEST_ITEM.getLastState(), is(new StringType("zero")));
+        ZonedDateTime lastStateUpdate = TEST_ITEM.getLastStateUpdate();
+        assertNotNull(lastStateUpdate);
+        assertThat(lastStateUpdate.toInstant(), is(firstEntry.timestamp()));
+        ZonedDateTime lastStateChange = TEST_ITEM.getLastStateChange();
+        assertNotNull(lastStateChange);
+        assertThat(lastStateChange.toInstant(), is(firstEntry.timestamp()));
+
+        // Check if other persistence services got updated
+        verify(persistenceServiceMock).store(TEST_ITEM, null);
+        verify(persistenceServiceMock, atLeast(0)).getId();
+        verifyNoMoreInteractions(persistenceServiceMock);
 
         // replace elements
         TimeSeries timeSeries2 = new TimeSeries(TimeSeries.Policy.REPLACE);
@@ -371,7 +505,7 @@ public class PersistenceManagerTest {
         assertThat(filterCriteria.getEndDate(), is(time4.atZone(ZoneId.systemDefault())));
 
         // verify restore future is not cancelled
-        verify(futures.get(0), never()).cancel(anyBoolean());
+        verify(futures.getFirst(), never()).cancel(anyBoolean());
 
         // verify new values are stored
         inOrder.verify(service, times(2)).store(any(Item.class), any(ZonedDateTime.class), any(State.class));
@@ -386,10 +520,26 @@ public class PersistenceManagerTest {
         manager.timeSeriesUpdated(TEST_ITEM, timeSeries3);
         // verify old restore future is cancelled
         inOrder.verify(service, times(1)).store(any(Item.class), any(ZonedDateTime.class), any(State.class));
-        verify(futures.get(0)).cancel(true);
+        verify(futures.getFirst()).cancel(true);
 
         // verify new restore future is properly created
         inOrder.verify(schedulerMock).at(any(SchedulerRunnable.class), eq(time5));
+    }
+
+    @Test
+    public void externalPersistenceDataChangeIsHandled() {
+        setupPersistence(new PersistenceAllConfig());
+        addConfiguration(TEST_PERSISTENCE_SERVICE_ID, List.of(new PersistenceAllConfig()),
+                PersistenceStrategy.Globals.UPDATE, null);
+        addConfiguration(TEST_QUERYABLE_PERSISTENCE_SERVICE_ID, List.of(new PersistenceAllConfig()),
+                PersistenceStrategy.Globals.UPDATE, null);
+        manager.handleExternalPersistenceDataChange(persistenceServiceMock, TEST_ITEM);
+        assertNotEquals(TEST_STATE, TEST_ITEM.getState());
+
+        manager.handleExternalPersistenceDataChange(queryablePersistenceServiceMock, TEST_ITEM);
+        verify(queryablePersistenceServiceMock).persistedItem(eq(TEST_ITEM_NAME), any());
+        assertEquals(TEST_STATE, TEST_ITEM.getState());
+        verify(persistenceServiceMock).store(TEST_ITEM, null);
     }
 
     @Test
@@ -397,9 +547,9 @@ public class PersistenceManagerTest {
         ArgumentCaptor<SchedulerRunnable> runnableCaptor = ArgumentCaptor.forClass(SchedulerRunnable.class);
         when(cronSchedulerMock.schedule(runnableCaptor.capture(), any())).thenReturn(scheduledFutureMock);
 
-        addConfiguration(TEST_PERSISTENCE_SERVICE_ID, new PersistenceItemConfig(TEST_ITEM3_NAME),
+        addConfiguration(TEST_PERSISTENCE_SERVICE_ID, List.of(new PersistenceItemConfig(TEST_ITEM3_NAME)),
                 new PersistenceCronStrategy("withoutFilter", "0 0 * * * ?"), null);
-        addConfiguration(TEST_QUERYABLE_PERSISTENCE_SERVICE_ID, new PersistenceItemConfig(TEST_ITEM3_NAME),
+        addConfiguration(TEST_QUERYABLE_PERSISTENCE_SERVICE_ID, List.of(new PersistenceItemConfig(TEST_ITEM3_NAME)),
                 new PersistenceCronStrategy("withFilter", "0 * * * * ?"),
                 new PersistenceThresholdFilter("test", BigDecimal.TEN, "", false));
 
@@ -408,8 +558,8 @@ public class PersistenceManagerTest {
         verify(readyServiceMock, timeout(1000)).markReady(any());
         List<SchedulerRunnable> runnables = runnableCaptor.getAllValues();
         assertThat(runnables.size(), is(2));
-        runnables.get(0).run();
-        runnables.get(0).run();
+        runnables.getFirst().run();
+        runnables.getFirst().run();
         runnables.get(1).run();
         runnables.get(1).run();
 
@@ -428,8 +578,8 @@ public class PersistenceManagerTest {
         when(cronSchedulerMock.schedule(any(), any())).thenReturn(scheduledFutureMock);
 
         PersistenceServiceConfiguration configuration = addConfiguration(TEST_PERSISTENCE_SERVICE_ID,
-                new PersistenceItemConfig(TEST_ITEM_NAME), new PersistenceCronStrategy("everyHour", "0 0 * * * ?"),
-                null);
+                List.of(new PersistenceItemConfig(TEST_ITEM_NAME)),
+                new PersistenceCronStrategy("everyHour", "0 0 * * * ?"), null);
 
         manager.onReadyMarkerAdded(new ReadyMarker("", ""));
 
@@ -444,8 +594,8 @@ public class PersistenceManagerTest {
 
     @Test
     public void filterAppliesOnStateUpdate() {
-        addConfiguration(TEST_PERSISTENCE_SERVICE_ID, new PersistenceAllConfig(), PersistenceStrategy.Globals.UPDATE,
-                new PersistenceThresholdFilter("test", BigDecimal.TEN, "", false));
+        addConfiguration(TEST_PERSISTENCE_SERVICE_ID, List.of(new PersistenceAllConfig()),
+                PersistenceStrategy.Globals.UPDATE, new PersistenceThresholdFilter("test", BigDecimal.TEN, "", false));
 
         manager.stateUpdated(TEST_ITEM3, DecimalType.ZERO);
         manager.stateUpdated(TEST_ITEM3, DecimalType.ZERO);
@@ -459,8 +609,9 @@ public class PersistenceManagerTest {
      * Add a configuration for restoring TEST_ITEM and mock the SafeCaller
      */
     private void setupPersistence(PersistenceConfig itemConfig) {
-        addConfiguration(TEST_PERSISTENCE_SERVICE_ID, itemConfig, PersistenceStrategy.Globals.RESTORE, null);
-        addConfiguration(TEST_QUERYABLE_PERSISTENCE_SERVICE_ID, itemConfig, PersistenceStrategy.Globals.RESTORE, null);
+        addConfiguration(TEST_PERSISTENCE_SERVICE_ID, List.of(itemConfig), PersistenceStrategy.Globals.RESTORE, null);
+        addConfiguration(TEST_QUERYABLE_PERSISTENCE_SERVICE_ID, List.of(itemConfig),
+                PersistenceStrategy.Globals.RESTORE, null);
 
         when(safeCallerMock.create(queryablePersistenceServiceMock, QueryablePersistenceService.class))
                 .thenReturn(safeCallerBuilderMock);
@@ -473,16 +624,16 @@ public class PersistenceManagerTest {
      * Add a configuration to the manager
      *
      * @param serviceId the persistence service id
-     * @param itemConfig the item configuration
+     * @param itemConfigs list item configurations
      * @param strategy the strategy
      * @param filter a persistence filter
      * @return the added strategy
      */
-    private PersistenceServiceConfiguration addConfiguration(String serviceId, PersistenceConfig itemConfig,
+    private PersistenceServiceConfiguration addConfiguration(String serviceId, List<PersistenceConfig> itemConfigs,
             PersistenceStrategy strategy, @Nullable PersistenceFilter filter) {
         List<PersistenceFilter> filters = filter != null ? List.of(filter) : List.of();
 
-        PersistenceItemConfiguration itemConfiguration = new PersistenceItemConfiguration(List.of(itemConfig), null,
+        PersistenceItemConfiguration itemConfiguration = new PersistenceItemConfiguration(itemConfigs,
                 List.of(strategy), filters);
 
         List<PersistenceStrategy> strategies = PersistenceStrategy.Globals.STRATEGIES.containsValue(strategy)
@@ -490,7 +641,7 @@ public class PersistenceManagerTest {
                 : List.of(strategy);
 
         PersistenceServiceConfiguration serviceConfiguration = new PersistenceServiceConfiguration(serviceId,
-                List.of(itemConfiguration), List.of(), strategies, filters);
+                List.of(itemConfiguration), Map.of(), strategies, filters);
         manager.added(serviceConfiguration);
 
         return serviceConfiguration;
@@ -541,19 +692,18 @@ public class PersistenceManagerTest {
         }
 
         @Override
-        public List<PersistenceStrategy> getDefaultStrategies() {
+        public List<PersistenceStrategy> getSuggestedStrategies() {
             return List.of();
         }
 
         @Override
-        @SuppressWarnings("unchecked")
         public Iterable<HistoricItem> query(FilterCriteria filter) {
-            ZonedDateTime begin = Objects.requireNonNull(filter.getBeginDate());
-            ZonedDateTime end = Objects.requireNonNull(filter.getEndDate());
-            List<ZonedDateTime> keys = states.keySet().stream().filter(t -> t.isAfter(begin) && t.isBefore(end))
-                    .toList();
-            return (Iterable<HistoricItem>) states.entrySet().stream().filter(e -> keys.contains(e.getKey()))
-                    .map(e -> new HistoricItem() {
+            ZonedDateTime begin = filter.getBeginDate();
+            ZonedDateTime end = filter.getEndDate();
+            List<ZonedDateTime> keys = states.keySet().stream()
+                    .filter(t -> (begin == null || t.isAfter(begin)) && (end == null || t.isBefore(end))).toList();
+            return states.entrySet().stream().filter(e -> keys.contains(e.getKey()))
+                    .<HistoricItem> map(e -> new HistoricItem() {
                         @Override
                         public ZonedDateTime getTimestamp() {
                             return e.getKey();
@@ -568,12 +718,7 @@ public class PersistenceManagerTest {
                         public String getName() {
                             return "item";
                         }
-                    }).iterator();
-        }
-
-        @Override
-        public Set<PersistenceItemInfo> getItemInfo() {
-            return Set.of();
+                    }).toList();
         }
     }
 }
