@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2024 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2026 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -18,6 +18,7 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
+import java.util.Set;
 import java.util.TreeMap;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
@@ -108,6 +109,11 @@ public class SemanticsMetadataProvider extends AbstractProvider<Metadata>
         return semantics.values();
     }
 
+    @Override
+    public Collection<String> getReservedNamespaces() {
+        return Set.of(NAMESPACE);
+    }
+
     /**
      * Updates the semantic metadata for an item and notifies all listeners about changes
      *
@@ -164,7 +170,7 @@ public class SemanticsMetadataProvider extends AbstractProvider<Metadata>
             return;
         }
         for (Entry<List<Class<? extends Tag>>, String> relation : propertyRelations.entrySet()) {
-            Class<? extends Tag> entityClass = relation.getKey().get(0);
+            Class<? extends Tag> entityClass = relation.getKey().getFirst();
             if (entityClass.isAssignableFrom(type)) {
                 Class<? extends Property> p = SemanticTags.getProperty(item);
                 if (p != null) {
@@ -211,7 +217,7 @@ public class SemanticsMetadataProvider extends AbstractProvider<Metadata>
         }
         for (Entry<List<Class<? extends Tag>>, String> relation : parentRelations.entrySet()) {
             List<Class<? extends Tag>> relClasses = relation.getKey();
-            Class<? extends Tag> entityClass = relClasses.get(0);
+            Class<? extends Tag> entityClass = relClasses.getFirst();
             Class<? extends Tag> parentClass = relClasses.get(1);
             // process relations of locations
             if (entityClass.isAssignableFrom(type)) {
@@ -236,7 +242,7 @@ public class SemanticsMetadataProvider extends AbstractProvider<Metadata>
         }
         for (Entry<List<Class<? extends Tag>>, String> relation : memberRelations.entrySet()) {
             List<Class<? extends Tag>> relClasses = relation.getKey();
-            Class<? extends Tag> entityClass = relClasses.get(0);
+            Class<? extends Tag> entityClass = relClasses.getFirst();
             Class<? extends Tag> parentClass = relClasses.get(1);
             // process relations of locations
             if (entityClass.isAssignableFrom(type)) {
