@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2024 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2026 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -52,8 +52,8 @@ public class LRUMediaCacheEntryTest {
     private @Mock @NonNullByDefault({}) LRUMediaCache<MetadataSample> ttsServiceMock;
     private @Mock @NonNullByDefault({}) Supplier<LRUMediaCacheEntry<MetadataSample>> supplier;
 
-    private @NonNullByDefault({}) @Mock StorageService storageService;
-    private @NonNullByDefault({}) @Mock Storage<MetadataSample> storage;
+    private @Mock @NonNullByDefault({}) StorageService storageService;
+    private @Mock @NonNullByDefault({}) Storage<MetadataSample> storage;
 
     @BeforeEach
     public void init() {
@@ -201,11 +201,11 @@ public class LRUMediaCacheEntryTest {
             }
         }).toList();
 
-        IOException possibleException = exceptionCatched.getValue();
+        IOException possibleException = exceptionCatched.get();
         if (possibleException != null) {
             throw possibleException;
         }
-        assertArrayEquals(randomData, bytesResultList.get(0));
+        assertArrayEquals(randomData, bytesResultList.getFirst());
         assertArrayEquals(randomData, bytesResultList.get(1));
 
         actualAudioStream1.close();
