@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2024 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2026 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -15,7 +15,8 @@ package org.openhab.core.config.discovery.internal;
 import static org.hamcrest.CoreMatchers.*;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 import static org.openhab.core.config.discovery.inbox.InboxPredicates.*;
 
 import java.math.BigDecimal;
@@ -160,10 +161,10 @@ public class InboxOSGiTest extends JavaOSGiTest {
             .withConfigDescriptionURI(testURI).build();
     private final ConfigDescription testConfigDescription = ConfigDescriptionBuilder.create(testURI)
             .withParameters(List.of(
-                    ConfigDescriptionParameterBuilder.create(discoveryResultPropertyKeys.get(0), Type.TEXT).build(),
+                    ConfigDescriptionParameterBuilder.create(discoveryResultPropertyKeys.getFirst(), Type.TEXT).build(),
                     ConfigDescriptionParameterBuilder.create(discoveryResultPropertyKeys.get(1), Type.INTEGER).build()))
             .build();
-    private final String[] keysInConfigDescription = new String[] { discoveryResultPropertyKeys.get(0),
+    private final String[] keysInConfigDescription = new String[] { discoveryResultPropertyKeys.getFirst(),
             discoveryResultPropertyKeys.get(1) };
     private final String[] keysNotInConfigDescription = new String[] { discoveryResultPropertyKeys.get(2),
             discoveryResultPropertyKeys.get(3), discoveryResultPropertyKeys.get(4) };
@@ -295,7 +296,7 @@ public class InboxOSGiTest extends JavaOSGiTest {
         allDiscoveryResults = inbox.getAll();
         assertThat(allDiscoveryResults.size(), is(1));
 
-        DiscoveryResult actualDiscoveryResult = allDiscoveryResults.get(0);
+        DiscoveryResult actualDiscoveryResult = allDiscoveryResults.getFirst();
         assertThat(actualDiscoveryResult.getThingUID(), is(thingUID));
         assertThat(actualDiscoveryResult.getThingTypeUID(), is(thingTypeUID));
         assertThat(actualDiscoveryResult.getBindingId(), is("dummyBindingId"));
@@ -338,7 +339,7 @@ public class InboxOSGiTest extends JavaOSGiTest {
         allDiscoveryResults = inbox.getAll();
         assertThat(allDiscoveryResults.size(), is(1));
 
-        DiscoveryResult actualDiscoveryResult = allDiscoveryResults.get(0);
+        DiscoveryResult actualDiscoveryResult = allDiscoveryResults.getFirst();
         assertThat(actualDiscoveryResult.getThingUID(), is(thingUID));
         assertThat(actualDiscoveryResult.getThingTypeUID(), is(thingTypeUID));
         assertThat(actualDiscoveryResult.getBindingId(), is("dummyBindingId"));
@@ -1019,7 +1020,7 @@ public class InboxOSGiTest extends JavaOSGiTest {
     @Test
     public void assertThatRemoveOlderResultsOnlyRemovesResultsFromTheSameDiscoveryService() {
         inbox.thingDiscovered(discoveryService1, testDiscoveryResult);
-        long now = Instant.now().toEpochMilli() + 1;
+        Instant now = Instant.now().plusMillis(1);
         assertThat(inbox.getAll().size(), is(1));
 
         // should not remove a result
@@ -1034,7 +1035,7 @@ public class InboxOSGiTest extends JavaOSGiTest {
     @Test
     public void assertThatRemoveOlderResultsRemovesResultsWithoutAsource() {
         inbox.add(testDiscoveryResult);
-        long now = Instant.now().toEpochMilli() + 1;
+        Instant now = Instant.now().plusMillis(1);
         assertThat(inbox.getAll().size(), is(1));
 
         // should remove a result
