@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2024 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2026 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -16,7 +16,8 @@ import static java.util.Map.entry;
 import static org.hamcrest.CoreMatchers.*;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 
 import java.net.URI;
 import java.net.URISyntaxException;
@@ -162,7 +163,7 @@ public class ChangeThingTypeOSGiTest extends JavaOSGiTest {
         ThingTypeRegistry thingTypeRegistry = mock(ThingTypeRegistry.class);
         when(thingTypeRegistry.getThingType(any(), any()))
                 .thenAnswer(invocation -> thingTypes.get(invocation.getArgument(0)));
-        registerService(thingTypeRegistry);
+        registerService(thingTypeRegistry, ThingTypeRegistry.class.getName());
 
         ConfigDescriptionProvider configDescriptionProvider = mock(ConfigDescriptionProvider.class);
         when(configDescriptionProvider.getConfigDescription(any(), any()))
@@ -272,7 +273,7 @@ public class ChangeThingTypeOSGiTest extends JavaOSGiTest {
         assertThat(thing.getConfiguration().get("parametergeneric"), is("defaultgeneric"));
         assertThat(thing.getConfiguration().get("providedspecific"), is(nullValue()));
         assertThat(thing.getChannels().size(), is(1));
-        assertThat(thing.getChannels().get(0).getUID(), is(CHANNEL_GENERIC_UID));
+        assertThat(thing.getChannels().getFirst().getUID(), is(CHANNEL_GENERIC_UID));
         assertThat(thing.getProperties().get("universal"), is("survives"));
 
         ThingHandlerFactory handlerFactory = getService(ThingHandlerFactory.class, SampleThingHandlerFactory.class);
@@ -391,7 +392,7 @@ public class ChangeThingTypeOSGiTest extends JavaOSGiTest {
 
         // Ensure that the new set of channels is there
         assertThat(thing.getChannels().size(), is(1));
-        assertThat(thing.getChannels().get(0).getUID().getId(), containsString("specific"));
+        assertThat(thing.getChannels().getFirst().getUID().getId(), containsString("specific"));
 
         // Ensure that the old properties are still there
         assertThat(thing.getProperties().get("universal"), is("survives"));
