@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2024 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2026 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -15,7 +15,6 @@ package org.openhab.core.thing.internal;
 import static org.hamcrest.CoreMatchers.*;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
@@ -162,7 +161,7 @@ public class ChannelLinkNotifierOSGiTest extends JavaOSGiTest {
 
         public @Nullable Boolean isLinkedBasedOnEvent(ChannelUID channelUID) {
             List<Boolean> events = getChannelLinkEvents(channelUID);
-            return events.isEmpty() ? null : events.get(events.size() - 1);
+            return events.isEmpty() ? null : events.getLast();
         }
 
         public void resetChannelLinkEvents() {
@@ -577,7 +576,7 @@ public class ChannelLinkNotifierOSGiTest extends JavaOSGiTest {
 
         ThingTypeRegistry thingTypeRegistry = mock(ThingTypeRegistry.class);
         when(thingTypeRegistry.getThingType(any(ThingTypeUID.class))).thenReturn(thingType);
-        registerService(thingTypeRegistry);
+        registerService(thingTypeRegistry, ThingTypeRegistry.class.getName());
 
         ChannelType channelType = ChannelTypeBuilder.state(CHANNEL_TYPE_UID, "Number", "Number").build();
 
@@ -588,6 +587,6 @@ public class ChannelLinkNotifierOSGiTest extends JavaOSGiTest {
 
         ChannelTypeRegistry channelTypeRegistry = mock(ChannelTypeRegistry.class);
         when(channelTypeRegistry.getChannelType(any(ChannelTypeUID.class))).thenReturn(channelType);
-        registerService(channelTypeRegistry);
+        registerService(channelTypeRegistry, ChannelTypeRegistry.class.getName());
     }
 }
